# blast-radius

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  action.yml
.github/: dependabot.yml
.github/workflows/: quality.yml  release.yml
docs/: ci.md  github-action.md  json-output.md  language-support.md  local-toolchain.md  quality.md
examples/chakra-ui/: .blast-radius.json  UPSTREAM.md
examples/component-demo/: README.md  package.json
examples/component-demo/src/: App.ts  Card.svelte
examples/excalidraw/: UPSTREAM.md
examples/fastapi/: UPSTREAM.md
examples/java-demo/: README.md
examples/java-demo/src/main/java/com/example/: App.java
examples/java-demo/src/main/java/com/example/service/: EmailService.java
examples/monorepo-demo/: README.md  package.json
examples/monorepo-demo/apps/storefront/: package.json
examples/monorepo-demo/apps/storefront/src/: App.tsx  LegacyButtonCard.jsx
examples/python-demo/: README.md
examples/python-demo/app/: __init__.py  main.py
examples/python-demo/tests/: test_main.py
examples/ruby-demo/: README.md
examples/ruby-demo/lib/: app.rb
examples/ruby-demo/lib/app/services/: email_service.rb
examples/rust-demo/: README.md
examples/rust-demo/src/: main.rs  models.rs
examples/rust-demo/src/services/: email.rs
examples/rust-demo/src/utils/: mod.rs
examples/vite-react-ts/: UPSTREAM.md
npm/: build-platform-packages.mjs
npm/blast-radius-cli/: README.md  package.json
scripts/: collect_metrics.mjs  fetch-examples.sh  pr-comment.mjs  pr-comment.test.mjs
scripts/accuracy/: .dependency-cruiser.cjs  README.md  oracle.mjs
src/: analyze.rs  cli.rs  fs.rs  graph.rs  init.rs  lib.rs  main.rs  parse.rs  report.rs  resolve.rs
src/analyze/: diagnostics.rs  result.rs  walk.rs
src/language/: component.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs
src/parse/: component.rs  facts.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs
src/parse/javascript/: usage.rs
src/report/: graph_formats.rs  mod.rs  theme.rs  tree.rs
src/report/tree/: cascade.rs
src/resolve/: java.rs  javascript.rs  mod.rs  package.rs  python.rs  ruby.rs  rust_lang.rs  tests.rs
tests/: cli_contract.rs  integration.rs
tests/fixtures/components/: package.json
tests/fixtures/components/src/: Button.vue  shared.ts
tests/fixtures/java/src/main/java/com/example/model/: User.java
tests/fixtures/java/src/main/java/com/example/report/: ReportService.java
tests/fixtures/java/src/main/java/com/example/util/: Formatter.java  Texts.java
tests/fixtures/monorepo/: tsconfig.json
tests/fixtures/monorepo/apps/storefront/src/: PromoCard.tsx
tests/fixtures/python/app/: compat.py  main.py
tests/fixtures/python/app/services/: email.py
tests/fixtures/python/app/utils/: __init__.py  formatting.py  helpers.py
tests/fixtures/ruby/lib/app/utils/: formatter.rb
tests/fixtures/rust/: Cargo.toml
tests/fixtures/rust/crates/api/: Cargo.toml
tests/fixtures/rust/crates/api/src/: main.rs
tests/fixtures/rust/crates/core/: Cargo.toml
tests/fixtures/rust/crates/core/src/: models.rs
tests/fixtures/rust/src/: lib.rs
tests/fixtures/rust/src/services/: mod.rs
tests/fixtures/rust/src/utils/: formatting.rs
