[package]
name = "blast-radius"
version = "0.1.0"
edition = "2024"
description = "Analyze the transitive blast radius of frontend code changes."
license = "MIT"
repository = "https://example.com/erichermanson/blast-radius"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
figlet-rs = "1.0"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.32.4", features = ["serde"] }
swc_common = "23.0.0"
swc_ecma_ast = "25.0.0"
swc_ecma_parser = { version = "41.0.0", features = ["typescript", "swc_ecma_visit"] }
swc_ecma_visit = "25.0.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.2.2"
predicates = "3.1"
