[package]
name = "blast-radius"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
autobins = false
description = "Analyze the transitive blast radius of code changes."
license = "MIT"
repository = "https://github.com/ehermanson/blast-radius"
readme = "README.md"
keywords = ["impact-analysis", "cli", "typescript", "pre-commit"]
categories = ["command-line-utilities", "development-tools"]
# Keep the published crate small: example repos (incl. large vendored snapshots),
# assets, and CI/dev tooling are not needed to build or use the binary.
exclude = [
    "examples/",
    "assets/",
    "docs/",
    "scripts/",
    ".github/",
]

[[bin]]
name = "blast-radius"
path = "src/main.rs"

[features]
default = ["javascript"]
javascript = []
python = ["dep:rustpython-parser"]
rust = ["dep:syn"]
vue = []
svelte = []
ruby = []
java = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
figlet-rs = "1.0"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.32.4", features = ["serde"] }
swc_common = "23.0.0"
swc_ecma_ast = "25.0.0"
swc_ecma_parser = { version = "41.0.0", features = ["typescript", "swc_ecma_visit"] }
swc_ecma_visit = "25.0.0"
rustpython-parser = { version = "0.4", optional = true }
syn = { version = "2.0", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.2.2"
predicates = "3.1"
